k8s/k3s/homepage/Manifest/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations: 
    kubernetes.io/ingress.class: traefik-external
    # Example annotations to add Homepage to your Homepage!
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/description: "Dynamically Detected Homepage"
    gethomepage.dev/group: "Dynamic"
    gethomepage.dev/icon: "homepage.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.devcraft.app`) # change to your domain
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls # change to your cert name
